# MultiVariatePointProcess

./: CMakeLists.txt  Makefile  README.md
doc/: architect.pptx
example/: CMakeLists.txt  Makefile  basic_residual_analysis.cc  fast_simulating_standard_hawkes.cc  influence_maximization.cc  learning_hawkes_with_customized_kernel.cc  learning_lowrank_hawkes.cc  learning_network_dynamics_exp_kernel.cc  learning_network_dynamics_general_kernel.cc  learning_network_structure_exp_kernel.cc  learning_network_structure_general_kernel.cc  learning_sparse_hawkes_with_customized_kernel.cc  learning_sparse_self_inhibiting_process.cc  learning_sparse_standard_hawkes.cc  learning_standard_hawkes.cc  learning_standard_hawkes_learning_triggering_kernel.cc  learning_standard_hawkes_lowrank_constraint.cc  learning_standard_self_inhibiting_process.cc
example/data/: example_cascade_exp_1000  example_network_cascade_general_kernel  example_network_general_kernel  example_network_hawkes  std_weibull_DAG_core-1024-1-network  truth-syn-Alpha  truth-syn-Lambda0
include/: BasicPoissonLearner.h  ContinEst.h  Diagnosis.h  Event.h  ExpKernel.h  FunctionHandler.h  GNUPlotWrapper.h  Graph.h  HPoisson.h  HawkesGeneralKernel.h  HawkesLearningTriggeringKernel.h  HawkesMLELearner.h  HawkesProcess.h  HawkesSGDLearner.h  HawkesSimulator.h  IProcess.h  Learner.h  LinearKernel.h  LowRankHawkesProcess.h  OgataThinning.h  Optimizer.h  PlainHawkes.h  PlainTerminating.h  Poisson.h  PoissonMLELearner.h  PowerlawKernel.h  Process.h  RayleighKernel.h  SelfInhibitingProcess.h  Sequence.h  SimpleRNG.h  Simulator.h  (+7 more)
(+29 files in other folders)
